--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description"
               content="Eunoia generates area-proportional Euler diagrams" />
-        <link rel="canonical" href="https://eunoia.cc/" />
+        <link rel="canonical" href="https://eunoia.fit/" />
+        <meta property="og:title" content="Eunoia" />
+        <meta property="og:description"
+              content="Eunoia generates area-proportional Euler diagrams" />
+        <meta property="og:url" content="https://eunoia.fit/" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="https://eunoia.fit/og.png" />
+        <meta property="og:image:type" content="image/png" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
         <title>Eunoia</title>
     </head>
     <body>
