feat(web): add twitter cards too

--- a/web/index.html
+++ b/web/index.html
@@ -21,6 +21,11 @@
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="1200" />
         <meta property="og:image:height" content="630" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Eunoia" />
+        <meta name="twitter:description"
+              content="Eunoia generates area-proportional Euler diagrams" />
+        <meta name="twitter:image" content="https://eunoia.fit/og.png" />
         <title>Eunoia</title>
     </head>
     <body>
